优化已知问题；
