# go_app/docs/swagger.yaml
@@ -293,19 +293,17 @@ paths:
       summary: 更新邮箱
       tags:
       - 用户管理
-  /users/info:
-    post:
+  /users/info/{id}:
+    get:
       consumes:
       - application/json
-      - application/x-www-form-urlencoded
       description: 获取指定用户的详细信息
       parameters:
       - description: 用户ID
-        in: body
-        name: user
+        in: path
+        name: id
         required: true
-        schema:
-          $ref: '#/definitions/models.UserIDRequest'
+        type: integer
       produces:
       - application/json
       responses:
